[gd_scene load_steps=40 format=3 uid="uid://bbkvwth6ke1is"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_vo33s"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/PullOutTab.gd" id="2_kmb27"]
[ext_resource type="StyleBox" uid="uid://dvu7f5h7snggp" path="res://Scenes and Scripts/UI/Menus/panelContainer.tres" id="2_r3neh"]
[ext_resource type="PackedScene" uid="uid://fl01bx28xqrn" path="res://Scenes and Scripts/UI/Equation/equation.tscn" id="3_7jee8"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="3_30w11"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/problem_tab.gd" id="3_kka6b"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="4_gj1up"]
[ext_resource type="Texture2D" uid="uid://d16opu3dyhri7" path="res://Textures/Buttons/eye/eye_open.png" id="5_15poa"]
[ext_resource type="Texture2D" uid="uid://bdcj3gv1qc01r" path="res://Textures/Buttons/icons/rewind.png" id="5_t5pc5"]
[ext_resource type="Texture2D" uid="uid://tql14gtq05lf" path="res://Textures/UI/Information/invalid.png" id="6_8a0lv"]
[ext_resource type="Texture2D" uid="uid://djfkh4k2lcuyg" path="res://Textures/Buttons/Tabs/tab_down_highlight.png" id="6_nprrx"]
[ext_resource type="Texture2D" uid="uid://b7i5pfnd47348" path="res://Textures/Buttons/icons/solution.png" id="6_pp1px"]
[ext_resource type="Texture2D" uid="uid://bw8jm82sn5nmq" path="res://Textures/Buttons/Tabs/tab_down.png" id="7_ed4go"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="7_itf5n"]
[ext_resource type="Texture2D" uid="uid://bcu6ptkd3fwfe" path="res://Textures/Buttons/icons/submit.png" id="8_2kr0t"]
[ext_resource type="FontFile" uid="uid://dohkbu7ekkfx8" path="res://Textures/Fonts/pixeltype/Pixeltype.ttf" id="8_cwpoq"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="8_w33hb"]
[ext_resource type="Texture2D" uid="uid://b3diapu0ec332" path="res://Textures/Buttons/icons/puzzle_piece.png" id="9_oqp5o"]
[ext_resource type="PackedScene" uid="uid://80bi27me1iqr" path="res://Scenes and Scripts/UI/Buttons/pull_out_tab_button_down.tscn" id="10_xn6km"]
[ext_resource type="FontFile" uid="uid://dtkr82iuj8ovy" path="res://Textures/Fonts/munro-font/Munro-2LYe.ttf" id="14_wsnu4"]
[ext_resource type="Texture2D" uid="uid://bf4xxweukjvsb" path="res://Textures/Buttons/icons/interaction.png" id="15_5phct"]
[ext_resource type="Texture2D" uid="uid://dvx430022t0ua" path="res://Textures/Buttons/icons/next.png" id="16_leqlk"]

[sub_resource type="Theme" id="Theme_rwvfw"]
TooltipPanel/styles/panel = ExtResource("2_r3neh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6ude"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4dng6"]
texture = ExtResource("3_30w11")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_top = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ci0m4"]
content_margin_top = 2.0
texture = ExtResource("3_30w11")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_top = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8jwl5"]
resource_local_to_scene = true
shader = ExtResource("8_w33hb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h8pia"]
resource_local_to_scene = true
shader = ExtResource("8_w33hb")

[sub_resource type="FontVariation" id="FontVariation_vdd88"]
base_font = ExtResource("14_wsnu4")
spacing_top = -3
spacing_bottom = -5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0dgr6"]
resource_local_to_scene = true
shader = ExtResource("8_w33hb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lwk0m"]
resource_local_to_scene = true
shader = ExtResource("8_w33hb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2qqop"]
resource_local_to_scene = true
shader = ExtResource("8_w33hb")

[sub_resource type="Theme" id="Theme_wmnb4"]
default_font = SubResource("FontVariation_vdd88")
default_font_size = 14

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0h3gk"]
resource_local_to_scene = true
shader = ExtResource("8_w33hb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bpd7e"]
resource_local_to_scene = true
shader = ExtResource("8_w33hb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3leac"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 6.0
texture = ExtResource("6_nprrx")
texture_margin_left = 6.0
texture_margin_top = 3.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k0cp4"]
content_margin_left = 4.0
content_margin_top = 1.0
content_margin_right = 4.0
content_margin_bottom = 6.0
texture = ExtResource("7_ed4go")
texture_margin_left = 6.0
texture_margin_top = 2.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="FontVariation" id="FontVariation_ipn0w"]
base_font = ExtResource("8_cwpoq")
spacing_top = -2
spacing_bottom = -4

[sub_resource type="Theme" id="Theme_d1tq1"]
Button/styles/hover = SubResource("StyleBoxTexture_3leac")
Button/styles/normal = SubResource("StyleBoxTexture_k0cp4")
Button/styles/pressed = SubResource("StyleBoxTexture_k0cp4")
Label/font_sizes/font_size = 16
Label/fonts/font = SubResource("FontVariation_ipn0w")

[node name="ProblemTab" type="Control" node_paths=PackedStringArray("DegreeLabel", "SubmitButton", "NextProblem", "PrevProblem", "ContentContainer", "TabButton", "MovingContainer")]
material = ExtResource("1_vo33s")
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_rwvfw")
script = ExtResource("3_kka6b")
DegreeLabel = NodePath("MovingContainer/VBoxContainer/Tab/HBoxContainer/DegreeContainer/HBoxContainer/Degree")
SubmitButton = NodePath("MovingContainer/VBoxContainer/Tab/HBoxContainer/Submit")
NextProblem = NodePath("MovingContainer/VBoxContainer/Tab/HBoxContainer/NextProblem")
PrevProblem = NodePath("MovingContainer/VBoxContainer/Tab/HBoxContainer/Rewind")
ContentContainer = NodePath("MovingContainer/VBoxContainer/Tab")
TabButton = NodePath("MovingContainer/VBoxContainer/PullOutTabButtonDown")
MovingContainer = NodePath("MovingContainer")
moving_container_margins = Vector2(2.08165e-12, -3)
move_direction = 3

[node name="MovingContainer" type="Control" parent="."]
use_parent_material = true
anchors_preset = 0

[node name="SubmitFeedback" type="Control" parent="MovingContainer" node_paths=PackedStringArray("ContentContainer", "MovingContainer")]
use_parent_material = true
anchors_preset = 0
offset_left = 193.0
offset_top = -40.0
offset_right = 193.0
offset_bottom = -40.0
script = ExtResource("2_kmb27")
ContentContainer = NodePath("MovingContainer")
MovingContainer = NodePath("MovingContainer")
move_direction = 3
stay_out_time = 2.0

[node name="MovingContainer" type="PanelContainer" parent="MovingContainer/SubmitFeedback"]
use_parent_material = true
layout_mode = 0
offset_left = 9.0
offset_top = 12.0
offset_right = 136.0
offset_bottom = 72.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_u6ude")

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/SubmitFeedback/MovingContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_4dng6")

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="DuplicateDiagram" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/DuplicateDiagram"]
layout_mode = 2
texture = ExtResource("6_8a0lv")
stretch_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/DuplicateDiagram"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Diagram already submitted"

[node name="IncorrectOrder" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/IncorrectOrder"]
layout_mode = 2
texture = ExtResource("6_8a0lv")
stretch_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/IncorrectOrder"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Incorrect degree"

[node name="TextureRect2" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/IncorrectOrder"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("15_5phct")
stretch_mode = 2

[node name="DiagramNotSolution" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/DiagramNotSolution"]
layout_mode = 2
texture = ExtResource("6_8a0lv")
stretch_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/DiagramNotSolution"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Diagram is incorrect"

[node name="DiagramSubmitted" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/DiagramSubmitted"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Diagram submitted"

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 326.0
offset_bottom = 58.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Tab" type="PanelContainer" parent="MovingContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(426, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_ci0m4")

[node name="HBoxContainer" type="HBoxContainer" parent="MovingContainer/VBoxContainer/Tab"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="Rewind" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer" instance=ExtResource("4_gj1up")]
material = SubResource("ShaderMaterial_8jwl5")
layout_mode = 2
icon = ExtResource("5_t5pc5")
minimum_size = Vector2(25, 24)
expand_icon = true
disabled = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/Rewind" instance=ExtResource("7_itf5n")]
tooltip = "Load previous problem"

[node name="Solution" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer" instance=ExtResource("4_gj1up")]
material = SubResource("ShaderMaterial_h8pia")
layout_mode = 2
icon = ExtResource("6_pp1px")
minimum_size = Vector2(25, 24)
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/Solution" instance=ExtResource("7_itf5n")]
tooltip = "Show solution"

[node name="DegreeContainer" type="PanelContainer" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(48, 2.08165e-12)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/DegreeContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="Degree" type="Label" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/DegreeContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_vdd88")
theme_override_font_sizes/font_size = 14
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionTexture" type="TextureRect" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/DegreeContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("15_5phct")
stretch_mode = 5

[node name="Tooltip" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/DegreeContainer" instance=ExtResource("7_itf5n")]
tooltip = "Problem degree"

[node name="Equation" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer" instance=ExtResource("3_7jee8")]
material = SubResource("ShaderMaterial_0dgr6")
use_parent_material = true
layout_mode = 2
scale_factor = 1.2

[node name="ViewSubmissions" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer" instance=ExtResource("4_gj1up")]
material = SubResource("ShaderMaterial_lwk0m")
layout_mode = 2
icon = ExtResource("5_15poa")
minimum_size = Vector2(24, 24)
expand_icon = true
disabled = true

[node name="Tooltip" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/ViewSubmissions" instance=ExtResource("7_itf5n")]
tooltip = "View submissions"

[node name="Submit" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer" instance=ExtResource("4_gj1up")]
material = SubResource("ShaderMaterial_2qqop")
layout_mode = 2
theme = SubResource("Theme_wmnb4")
icon = ExtResource("8_2kr0t")
text = "0/0"
minimum_size = Vector2(47, 24)
expand_icon = true
icon_use_parent_material = true
icon_text_seperation = 0

[node name="Tooltip" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/Submit" instance=ExtResource("7_itf5n")]
tooltip = "Submit solution"

[node name="NextProblem" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer" instance=ExtResource("4_gj1up")]
material = SubResource("ShaderMaterial_0h3gk")
layout_mode = 2
theme = SubResource("Theme_wmnb4")
icon = ExtResource("16_leqlk")
minimum_size = Vector2(26, 24)
disabled = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/VBoxContainer/Tab/HBoxContainer/NextProblem" instance=ExtResource("7_itf5n")]
tooltip = "Next Problem"

[node name="PullOutTabButtonDown" parent="MovingContainer/VBoxContainer" instance=ExtResource("10_xn6km")]
z_index = 0
material = SubResource("ShaderMaterial_bpd7e")
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_d1tq1")
TabIcon = ExtResource("9_oqp5o")
TabMinimumSize = Vector2(33, 15)
icon_use_parent_material = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="MovingContainer/VBoxContainer/Tab/HBoxContainer/Rewind" to="." method="_on_rewind_pressed"]
[connection signal="pressed" from="MovingContainer/VBoxContainer/Tab/HBoxContainer/Solution" to="." method="_on_solution_pressed"]
[connection signal="pressed" from="MovingContainer/VBoxContainer/Tab/HBoxContainer/ViewSubmissions" to="." method="_on_view_submissions_pressed"]
[connection signal="pressed" from="MovingContainer/VBoxContainer/Tab/HBoxContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="MovingContainer/VBoxContainer/Tab/HBoxContainer/NextProblem" to="." method="_on_next_problem_pressed"]
